[package]
name = "tower-sessions-file-store"
version = "0.1.0"
edition = "2021"
description = "Store sessions for Tower Session store on the file system"
license = "MIT"
keywords = ["axum", "sessions", "cookie", "tower"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/mousetail/tower-sessions-file-store"
readme = "./readme.md"

[dependencies]
async-trait = "0.1.83"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["fs"] }
tower-sessions = "0.13.0"
